welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i<- 1 to nbPas) {
          ^Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
    recule;
    ^